--- a/Grow.Server/wwwroot/css/backend.css
+++ b/Grow.Server/wwwroot/css/backend.css
@@ -62,6 +62,12 @@ textarea.form-control {
 ::placeholder {
   font-style: italic; }
 
+.custom-file > *, .custom-file > *::after {
+  line-height: calc(1.4rem + 2px); }
+
+.card-user .image.full-height {
+  height: 100%; }
+
 /* Column selector input in the Backend vertical navbar */
 #contest-selector {
   background-color: transparent;
