--- a/Grow.Server/Areas/Admin/Views/Accounts/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Create.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TeamId" class="control-label">Team</label>
-                <search asp-for="TeamId" asp-type="@(Html.GetControllerFor(c => c.Team))" asp-current-only="false" class="form-control" />
+                <search asp-for="TeamId" asp-value="Team" asp-current-only="false" class="form-control" />
                 <span asp-validation-for="TeamId" class="text-danger"></span>
             </div>
             @if (ViewBag.IsSuperAdmin)
