--- a/Grow.Server/Areas/Admin/Views/Events/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Edit.cshtml
@@ -40,17 +40,17 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="ImageId" class="control-label">Image</label>
-                        <imgselector asp-items="ViewBag.Images" asp-for="ImageId" asp-prop="Image" class="form-control" />
+                        <upload asp-enable-search asp-for="ImageId" asp-prop="Image" class="form-control" />
                         <span asp-validation-for="ImageId" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="SlidesId" class="control-label">Slides</label>
-                        <imgselector asp-items="ViewBag.Images" asp-for="SlidesId" asp-prop="Slides" class="form-control" />
+                        <upload asp-for="SlidesId" asp-prop="Slides" class="form-control" />
                         <span asp-validation-for="SlidesId" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="HeldBy" class="control-label"></label>
-                        <select asp-items="ViewBag.Partners" asp-for="HeldById" class="form-control"></select>
+                        <search asp-for="HeldById" asp-value="HeldBy" asp-current-only="true" class="form-control" />
                         <span asp-validation-for="HeldById" class="text-danger"></span>
                     </div>
                 </div>
