--- a/Grow.Server/Areas/Admin/Views/Prizes/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Prizes/Edit.cshtml
@@ -34,12 +34,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Winner" class="control-label"></label>
-                <select asp-items="ViewBag.Teams" asp-for="WinnerId" class="form-control"></select>
+                <search asp-for="WinnerId" asp-value="Winner" asp-current-only="true" class="form-control" />
                 <span asp-validation-for="WinnerId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="GivenBy" class="control-label"></label>
-                <select asp-items="ViewBag.Partners" asp-for="GivenById" class="form-control"></select>
+                <search asp-for="GivenById" asp-value="GivenBy" asp-current-only="true" class="form-control" />
                 <span asp-validation-for="GivenById" class="text-danger"></span>
             </div>
             <div class="form-group">
