--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -105,7 +105,7 @@ textarea.form-control {
 }
 
 /* Image selector input in the Backend entity forms */
-.form-group div.img-selector {
+.form-group div.file-uploader {
     padding: 0;
     border: 0;
     display: grid;
