--- a/Grow.Server/wwwroot/css/backend.css
+++ b/Grow.Server/wwwroot/css/backend.css
@@ -81,14 +81,14 @@ textarea.form-control {
     color: black; }
 
 /* Image selector input in the Backend entity forms */
-.form-group div.img-selector {
+.form-group div.file-uploader {
   padding: 0;
   border: 0;
   display: grid;
   grid-template-columns: auto 38px; }
-  .form-group div.img-selector a:hover {
+  .form-group div.file-uploader a:hover {
     background-color: rgba(0, 0, 0, 0.05); }
-  .form-group div.img-selector img {
+  .form-group div.file-uploader img {
     padding: 10px;
     max-height: 200px; }
 
