--- a/Grow.Server/Areas/Admin/Views/Events/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Create.cshtml
@@ -122,20 +122,29 @@
                         <span asp-validation-for="Visibility" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="RegistrationOptions.Type" class="control-label">Registration</label>
-                        <select asp-for="RegistrationOptions.Type" asp-items="ViewBag.RegistrationTypes" class="form-control"></select>
-                        <span asp-validation-for="RegistrationOptions.Type" class="text-danger"></span>
+                        <div class="checkbox">
+                            <label>
+                                <input asp-for="CanVisitorsRegister" /> @Html.DisplayNameFor(model => model.CanVisitorsRegister)
+                            </label>
+                        </div>
                     </div>
-                    <div class="conditional indent" data-if="RegistrationOptions.Type" data-neq="@((int)Grow.Data.Entities.Event.RegistrationType.None)">
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input asp-for="CanTeamsRegister" /> @Html.DisplayNameFor(model => model.CanTeamsRegister)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="conditional indent" data-if="@nameof(Grow.Data.Entities.Event.CanTeamsRegister)" data-eq="true">
                         <div class="form-group">
-                            <label asp-for="RegistrationOptions.From" class="control-label"></label>
-                            <input asp-for="RegistrationOptions.From" type="date" class="form-control" />
-                            <span asp-validation-for="RegistrationOptions.From" class="text-danger"></span>
+                            <label asp-for="TeamRegistrationOptions.From" class="control-label"></label>
+                            <input asp-for="TeamRegistrationOptions.From" type="date" class="form-control" />
+                            <span asp-validation-for="TeamRegistrationOptions.From" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="RegistrationOptions.Until" class="control-label"></label>
-                            <input asp-for="RegistrationOptions.Until" type="date" class="form-control" />
-                            <span asp-validation-for="RegistrationOptions.Until" class="text-danger"></span>
+                            <label asp-for="TeamRegistrationOptions.Until" class="control-label"></label>
+                            <input asp-for="TeamRegistrationOptions.Until" type="date" class="form-control" />
+                            <span asp-validation-for="TeamRegistrationOptions.Until" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group">
