--- a/Grow.Server/Views/Event/View.cshtml
+++ b/Grow.Server/Views/Event/View.cshtml
@@ -120,13 +120,10 @@
             </div>
         </div>
 
-        @{
-            var canRegister = Model.CanUserRegisterNow((bool)ViewBag.IsLoggedIn);
-        }
-        @if (canRegister)
+        @if (Model.CanVisitorRespondNow())
         {
             <div style="text-align: center; margin: 40px;">
-                @Html.ActionLink("Register now", "Respond", "Event", new { id = Model.Id }, new { @class = "button btn btn-default" })
+                @Html.ActionLink("Are you coming?", "Respond", "Event", new { id = Model.Id }, new { @class = "button btn btn-default" })
             </div>
         }
 
