--- a/Grow.Server/Views/Home/Program.cshtml
+++ b/Grow.Server/Views/Home/Program.cshtml
@@ -120,13 +120,10 @@
                                 }
                             </div>
                         </div>
-                        @{
-                            var canRegister = evnt.CanUserRegisterNow((bool) ViewBag.IsLoggedIn);
-                        }
-                        @if (canRegister)
+                        @if (evnt.CanVisitorRespondNow())
                         {
                             <div style="text-align: center; margin: 40px;">
-                                @Html.ActionLink("Register now", "Respond", "Event", new { id = evnt.Id }, new { @class = "button btn btn-default" })
+                                @Html.ActionLink("Are you coming?", "Respond", "Event", new { id = evnt.Id }, new { @class = "button btn btn-default" })
                             </div>
                         }
                     </section>
