--- a/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
@@ -38,10 +38,7 @@
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="/css/main.css" />
-    <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie8.css" /><![endif]-->
-    <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie9.css" /><![endif]-->
 
     <meta charset="utf-8" />
     <meta property="og:title" content="GROW - the Student Founding Contest" />
@@ -105,12 +102,6 @@
     </div>
 
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/jquery.dropotron.edited.min.js"></script>
-    <script src="/js/jquery.scrolly.min.js"></script>
-    <script src="/js/jquery.scrollgress.min.js"></script>
-    <script src="/js/skel.min.js"></script>
-    <script src="/js/util.js"></script>
-    <!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
-    <script src="/js/main.js"></script>
+    <script src="/js/main.min.js"></script>
 </body>
 </html>
