--- a/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
@@ -103,5 +103,6 @@
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/main.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
