--- a/Grow.Server/wwwroot/css/main.css
+++ b/Grow.Server/wwwroot/css/main.css
@@ -1743,6 +1743,20 @@ body.index #main {
   #cta header {
     margin-bottom: 2em; }
 
+/* Newsletter */
+#newsletter {
+  background-attachment: scroll, scroll, scroll, fixed;
+  background-color: #645862;
+  background-image: url("/css/images/light-tl.svg"), url("/css/images/light-tr.svg"), url("/css/images/overlay.png"), url("/css/images/background_2.jpg");
+  background-position: top left, top right, top left, bottom center;
+  background-repeat: no-repeat, no-repeat, repeat, no-repeat;
+  background-size: 25em, 25em, auto, cover;
+  color: #fff;
+  padding: 5em;
+  text-align: center; }
+  #newsletter header {
+    margin-bottom: 2em; }
+
 /* Partners */
 .logos {
   margin: 60px 0; }
