--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -5,6 +5,25 @@
     ViewBag.TransparentNavbar = true;
 }
 
+@section Scripts {
+
+    <script type="text/javascript">
+        $(document).ready(() => {
+            $("#signup").click(() => {
+                // add JB tracker
+                var _paq = _paq || []; (function () { if (window.apScriptInserted) return; _paq.push(['clientToken', 'P%2bsIjEMd6oQ%3d']); var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0]; g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = 'https://prod.benchmarkemail.com/tracker.bundle.js'; s.parentNode.insertBefore(g, s); window.apScriptInserted = true; })();
+
+                // include benchmark code
+                $.ajax({
+                    type: "GET",
+                    url: "https://lb.benchmarkemail.com//de/code/lbformnew.js?mFcQnoBFKMTsK6pJMlXEB1cgGr0xQgnhhpzUQIyvOqERo7EOPCQKdMj9ybR%252Bnt%252Fk",
+                    dataType: "script"
+                });
+            });
+        });
+    </script>
+}
+
 <section id="banner">
     <div class="inner">
         <header>
@@ -175,7 +194,19 @@
         </p>
     </section>
 
-    <section class="wrapper style3 container special">
+    <section id="newsletter">
+        <header>
+            <h2>Become a GROW fan</h2>
+        </header>
+        <p>
+            Sign up to our GROW newsletter to get updates about the main events, the program and other important news.
+        </p>
+        <p>
+            @Html.ActionLink("Sign up", "Newsletter", "Home", null, new { @class = "button special" })
+        </p>
+    </section>
+
+    <section class="wrapper style3 container special" style="margin-top: 100px">
         <header class="major">
             <h2>That's what alumni have to say about <strong>GROW</strong></h2>
         </header>
