--- a/Grow.Server/Views/Shared/Layouts/_BackendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_BackendLayout.cshtml
@@ -106,8 +106,8 @@
                         }
                         if (ViewBag.TeamId > 0)
                         {
-                            <li conditional-active asp-area="Team">
-                                <a asp-controller="Home" asp-action="Index" asp-area="Team">
+                            <li conditional-active asp-area="MyTeam">
+                                <a asp-controller="Home" asp-action="Index" asp-area="MyTeam">
                                     <i class="nc-icon nc-bulb-63"></i>
                                     My Team
                                 </a>
