--- a/Grow.Server/Views/Home/Program.cshtml
+++ b/Grow.Server/Views/Home/Program.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Grow.Data.Entities
 @using Grow.Server.Model.Extensions
-@model ICollection<Grow.Data.Entities.Event>
+@using Grow.Server.Model.ViewModels
+@model ICollection<Event>
 
 @{
     ViewBag.Title = "Program";
@@ -61,65 +62,9 @@
                         <header>
                             <h3>@evnt.Name</h3>
                         </header>
-                        <p style="white-space: pre-line">@evnt.Description</p>
-                        <p>
-                            @Html.ActionLink("More Details", "View", "Event", new { id = evnt.Id })
-                            @if (!string.IsNullOrEmpty(evnt.ExternalEventUrl))
-                            {
-                                <a href="@evnt.ExternalEventUrl">View on Facebook</a>
-                            }
-                        </p>
-                        <div class="row">
-                            <div class="2u 5u(narrower)"><img src="/img/icon/eventdate.png" width="50%" /></div>
-                            <div class="3u 10u(narrower)" align="left" style="font-weight: 400;">
-                                @{
-                                    string formatString = string.Empty;
-                                    if (evnt.Start.Month == evnt.End.Month)
-                                    {
-                                        formatString = (evnt.Start.DayOfYear == evnt.Start.DayOfYear)
-                                            ? "{0:MMMM dd}{1}, {0:yyyy}"
-                                            : "{0:MMMM dd}{1} - {2:dd}{3}, {0:yyyy}";
-                                    }
-                                    else if (evnt.Start.Year == evnt.End.Year)
-                                    {
-                                        formatString = "{0:MM dd}{1} - {2:MM dd}{3}, {0:yyyy}";
-                                    }
-                                    else
-                                    {
-                                        formatString = "{0:MM dd yy} - {2:MM dd yy}";
-                                    }
-                                }
-                                @string.Format(formatString, evnt.Start, evnt.Start.GetDayExtension(), evnt.End, evnt.End.GetDayExtension())
-                                @if (evnt.HasTimesSet)
-                                {
-                                    <br />
-                                    @(evnt.Start.ToShortTimeString()) @:- @(evnt.End.ToShortTimeString())
-                                }
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="2u 5u(narrower)"><img src="/img/icon/placeholder.png" width="50%" /></div>
-                            <div class="10u 10u(narrower)" align="left" style="font-weight: 400">
-                                @evnt.Location<br />@evnt.Address
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="2u 5u(narrower)"><img src="/img/icon/visibility.png" width="50%" /></div>
-                            <div class="10u 10u(narrower)" align="left" style="font-weight: 400;">
-                                @switch (evnt.Visibility)
-                                {
-                                    case Event.EventVisibility.Public:
-                                        @: Public<br />Everyone can come and watch
-                                        break;
-                                    case Event.EventVisibility.ForActiveTeams:
-                                        @: Private<br />Only for actively enrolled teams
-                                        break;
-                                    case Event.EventVisibility.ForAllTeams:
-                                        @: Private<br />Only for registered teams
-                                        break;
-                                }
-                            </div>
-                        </div>
+
+                        <partial name="Partials/_EventDetailsPartial" model="new EventViewModel(evnt)" />
+
                         @if (evnt.CanVisitorRespondNow())
                         {
                             <div style="text-align: center; margin: 40px;">
