--- a/Grow.Server/Styles/main.scss
+++ b/Grow.Server/Styles/main.scss
@@ -1051,19 +1051,21 @@ input[type="reset"],
 /* Partners */
 
 .logos {
+    display: flex;
     margin: 60px 0;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: space-between;
+    flex-wrap: wrap;
 
-    &.row {
-        text-align: center;
-    }
-
-    &.row > * {
+    & > div {
         display: inline-block;
+        margin: 30px;
     }
 
     img {
-        width: 100%;
-        vertical-align: center;
+        max-width: 300px;
+        max-height: 150px;
     }
 }
 
