--- a/Grow.Server/wwwroot/css/main.css
+++ b/Grow.Server/wwwroot/css/main.css
@@ -1759,14 +1759,18 @@ body.index #main {
 
 /* Partners */
 .logos {
-  margin: 60px 0; }
-  .logos.row {
-    text-align: center; }
-  .logos.row > * {
-    display: inline-block; }
+  display: flex;
+  margin: 60px 0;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: space-between;
+  flex-wrap: wrap; }
+  .logos > div {
+    display: inline-block;
+    margin: 30px; }
   .logos img {
-    width: 100%;
-    vertical-align: center; }
+    max-width: 300px;
+    max-height: 150px; }
 
 /* Footer */
 #footer {
