--- a/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
@@ -38,7 +38,7 @@
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/frontend.min.css" />
 
     <meta charset="utf-8" />
     <meta property="og:title" content="GROW - the Student Founding Contest" />
@@ -102,7 +102,7 @@
     </div>
 
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/main.min.js"></script>
+    <script src="/js/frontend.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
