--- a/Grow.Server/Styles/frontend.scss
+++ b/Grow.Server/Styles/frontend.scss
@@ -153,7 +153,7 @@
 		font-weight: 400;
 	}
 
-	p, ul, ol, dl, table, blockquote {
+	p, ul, ol, dl, table {
 		margin: 0 0 2em 0;
 	}
 
@@ -198,38 +198,6 @@
 		border: 0;
 		margin-bottom: 1.5em;
 	}
-
-    blockquote {
-        border-left: solid 0.5em _palette(border);
-        font-style: italic;
-        width: 100%;
-        margin: 0.25em 0;
-        padding: 0.25em 40px;
-        line-height: 1.45;
-        position: relative;
-        color: #383838;
-
-        &:before {
-            display: flex;
-            content: "\201C";
-            font-size: 80px;
-            position: absolute;
-            left: -20px;
-            top: -20px;
-            color: #7a7a7a;
-        }
-
-        cite {
-            color: #999999;
-            font-size: 14px;
-            display: flex;
-            margin-top: 5px;
-
-            &:before {
-                content: "\2014 \2009";
-            }
-        }
-    }
 
     .fit {
         max-width: 99%;
@@ -1066,6 +1034,7 @@ input[type="reset"],
     img {
         max-width: 300px;
         max-height: 150px;
+        display: block;
     }
 }
 
