--- a/Grow.Server/wwwroot/css/frontend.css
+++ b/Grow.Server/wwwroot/css/frontend.css
@@ -1045,7 +1045,7 @@ a {
 strong, b {
   font-weight: 400; }
 
-p, ul, ol, dl, table, blockquote {
+p, ul, ol, dl, table {
   margin: 0 0 2em 0; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -1081,31 +1081,6 @@ hr {
   border-top: solid 1px rgba(124, 128, 129, 0.2);
   border: 0;
   margin-bottom: 1.5em; }
-
-blockquote {
-  border-left: solid 0.5em rgba(124, 128, 129, 0.2);
-  font-style: italic;
-  width: 100%;
-  margin: 0.25em 0;
-  padding: 0.25em 40px;
-  line-height: 1.45;
-  position: relative;
-  color: #383838; }
-  blockquote:before {
-    display: flex;
-    content: "\201C";
-    font-size: 80px;
-    position: absolute;
-    left: -20px;
-    top: -20px;
-    color: #7a7a7a; }
-  blockquote cite {
-    color: #999999;
-    font-size: 14px;
-    display: flex;
-    margin-top: 5px; }
-    blockquote cite:before {
-      content: "\2014 \2009"; }
 
 .fit {
   max-width: 99%;
@@ -1770,7 +1745,8 @@ body.index #main {
     margin: 30px; }
   .logos img {
     max-width: 300px;
-    max-height: 150px; }
+    max-height: 150px;
+    display: block; }
 
 /* Footer */
 #footer {
